# kissbt

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python-package.yaml  python-publish.yaml
conda-recipe/: meta.yaml
examples/: 20241227_introduction.ipynb
kissbt/: __init__.py  _market_data.py  _market_data_validation.py  analyzer.py  broker.py  cli.py  engine.py  entities.py  strategy.py
tests/: conftest.py  data_utils.py  test_analyzer.py  test_broker.py  test_cli.py  test_data_utils.py  test_engine.py  test_entities.py  test_integration.py  test_package_api.py  test_strategy.py
tests/scripts/: prepare_integration_data.py
