[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kissbt"
version = "0.1.5"
description = "The keep it simple backtesting framework for Python."
readme = "README.md"
authors = [
    { name = "Adrian Hasse", email = "adrian.hasse@finblobs.com" }
]
maintainers = [
    { name = "Adrian Hasse", email = "adrian.hasse@finblobs.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
    "mypy",
    "yfinance",
    "pyarrow",
]

[project.urls]
homepage = "https://github.com/FinBlobs/kissbt"
bug-tracker = "https://github.com/FinBlobs/kissbt/issues"

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["kissbt", "tests"]

[tool.ruff.lint]
# Enable core rules equivalent to flake8, black, isort
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E203",  # whitespace before ':'
]

[tool.ruff.format]
# Enable Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true