[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kissbt"
version = "0.1.6"
description = "The keep it simple backtesting framework for Python."
readme = "README.md"
authors = [
    { name = "Adrian Hasse", email = "adrian.hasse@finblobs.com" }
]
maintainers = [
    { name = "Adrian Hasse", email = "adrian.hasse@finblobs.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib"
]
requires-python = ">=3.12,<3.15"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
    "mypy",
    "yfinance",
    "pyarrow",
]

[project.scripts]
kissbt = "kissbt.cli:main"

[project.urls]
homepage = "https://github.com/FinBlobs/kissbt"
bug-tracker = "https://github.com/FinBlobs/kissbt/issues"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["kissbt", "tests"]
exclude = [
    ".git",
    "__pycache__",
    "build", 
    "dist",
    "examples",
]

[tool.ruff.lint]
# Start with core rules equivalent to the original flake8 setup
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
]
# TODO: Gradually add more rules like N, UP, C4, B

[tool.ruff.lint.isort]
known-first-party = ["kissbt", "tests"]

[tool.ruff.format]
# Enable Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
# Start with basic type checking, will enable strict mode later
warn_return_any = false
warn_unused_configs = true
show_error_codes = true
ignore_missing_imports = true
